--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,2 @@
-
-<h1>Welcome to my app!</h1>
-<p>Sign up  <%= link_to "here" ,"#" %>.</p>
-
-
-
+<h1> Welcome to my app! </h1>
+<p> Click Here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %></p>
