--- a/app/assets/stylesheets/boostrap_and_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_and_customization.css.scss
@@ -1,3 +1,7 @@
-$body-bg:  	#e74c3c ;
-
+$body-bg:  	#e74c3c;
+$navbar-inverse-bg : #16a085;
+$navbar-inverse-link-color: white;
+$brand-primary: #2ecc71;
+$jumbotron-bg: #ecf0f1;
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
